Update index.html 1

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="banner v3.2" alt="SaaS Dashboard UI">
+                <img src="banner v3.2" alt="SaaS Dashboard UI" class="hero-img">
             </div>
         </div>
     </header>
@@ -47,10 +47,10 @@
         <div class="container">
             <p>Trusted by over 500+ Investment Firms</p>
             <div class="partner-logos">
-                <img src="logo_color.jpg" alt="Partner">
-                <img src="logo_color.jpg" alt="Partner">
-                <img src="logo_color.jpg" alt="Partner">
-                <img src="logo_color.jpg" alt="Partner">
+                <img src="logo_color.jpg" alt="Partner" class="partner-logo">
+                <img src="logo_color.jpg" alt="Partner" class="partner-logo">
+                <img src="logo_color.jpg" alt="Partner" class="partner-logo">
+                <img src="logo_color.jpg" alt="Partner" class="partner-logo">
             </div>
         </div>
     </section>
@@ -84,7 +84,7 @@
     <section id="solutions" class="solutions">
         <div class="container split-layout">
             <div class="split-image">
-                <img src="logo_color.jpg">
+                <img src="logo_color.jpg" alt="White Label Platform" class="solution-img">
             </div>
             <div class="split-content">
                 <h3>Your Brand, Front and Center</h3>
@@ -145,4 +145,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
