Update index.html 3

--- a/index.html
+++ b/index.html
@@ -4,146 +4,183 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinCore | Digital Wealth Management Solutions</title>
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
-    <nav class="navbar">
-        <div class="container">
-            <a href="#" class="logo">FinCore<span class="dot">.</span></a>
-            <div class="menu-toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+<!-- ================= NAVBAR ================= -->
+<nav class="navbar">
+    <div class="container">
+        <a href="#" class="logo">FinCore<span class="dot">.</span></a>
+
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+
+        <ul class="nav-menu">
+            <li><a href="#features" class="nav-link">Features</a></li>
+            <li><a href="#solutions" class="nav-link">Solutions</a></li>
+            <li><a href="#" class="btn-secondary">Login</a></li>
+            <li><a href="#" class="btn-primary">Book a Demo</a></li>
+        </ul>
+    </div>
+</nav>
+
+<!-- ================= HERO ================= -->
+<header class="hero">
+    <div class="container hero-content">
+
+        <div class="hero-text">
+            <h1>Future-Proof Your<br>Wealth Management Firm</h1>
+            <p>
+                A modern operating system for advisors. Digitize onboarding,
+                portfolio reporting, and client engagement — all in one platform.
+            </p>
+
+            <div class="hero-buttons">
+                <a href="#" class="btn-primary">Start Free Trial</a>
+                <a href="#" class="btn-outline">
+                    Watch Video <i class="fas fa-play-circle"></i>
+                </a>
             </div>
-            <ul class="nav-menu">
-                <li><a href="#features" class="nav-link">Features</a></li>
-                <li><a href="#solutions" class="nav-link">Solutions</a></li>
-                <li><a href="#testimonials" class="nav-link">Success Stories</a></li>
-                <li><a href="#" class="btn-secondary nav-action">Login</a></li>
-                <li><a href="#" class="btn-primary nav-action">Book a Demo</a></li>
+        </div>
+
+        <div class="hero-image">
+            <img src="banner-v3.png" alt="FinCore Dashboard" class="hero-img">
+        </div>
+
+    </div>
+</header>
+
+<!-- ================= PARTNERS ================= -->
+<section class="partners">
+    <div class="container">
+        <p class="section-eyebrow">Trusted by 500+ Investment Firms</p>
+
+        <div class="partner-logos">
+            <img src="logo_color.jpg" alt="Partner" class="partner-logo">
+            <img src="logo_color.jpg" alt="Partner" class="partner-logo">
+            <img src="logo_color.jpg" alt="Partner" class="partner-logo">
+            <img src="logo_color.jpg" alt="Partner" class="partner-logo">
+        </div>
+    </div>
+</section>
+
+<!-- ================= FEATURES ================= -->
+<section id="features" class="features">
+    <div class="container">
+
+        <div class="section-header">
+            <h2>The Operating System for Modern Advisors</h2>
+            <p>Everything you need to scale your advisory business efficiently.</p>
+        </div>
+
+        <div class="feature-grid">
+
+            <div class="feature-card">
+                <i class="fas fa-file-signature icon"></i>
+                <h3>Digital Onboarding</h3>
+                <p>Paperless account opening with built-in KYC and e-signatures.</p>
+            </div>
+
+            <div class="feature-card">
+                <i class="fas fa-chart-line icon"></i>
+                <h3>Portfolio Analytics</h3>
+                <p>Real-time performance insights and white-labeled reporting.</p>
+            </div>
+
+            <div class="feature-card">
+                <i class="fas fa-shield-alt icon"></i>
+                <h3>Enterprise-Grade Security</h3>
+                <p>SOC-2 compliant infrastructure with end-to-end encryption.</p>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<!-- ================= SOLUTIONS ================= -->
+<section id="solutions" class="solutions">
+    <div class="container split-layout">
+
+        <div class="split-image">
+            <img src="logo_color.jpg" alt="White Label Platform">
+        </div>
+
+        <div class="split-content">
+            <h3>Your Brand, Front and Center</h3>
+            <p>
+                Launch a fully white-labeled web and mobile experience under your
+                own brand — without building technology from scratch.
+            </p>
+
+            <ul class="check-list">
+                <li><i class="fas fa-check"></i> Custom Domain & Branding</li>
+                <li><i class="fas fa-check"></i> Integrated Billing & Invoicing</li>
+                <li><i class="fas fa-check"></i> Unified Client Communication</li>
+            </ul>
+
+            <a href="#" class="btn-text">Explore Customization →</a>
+        </div>
+
+    </div>
+</section>
+
+<!-- ================= CTA ================= -->
+<section class="cta">
+    <div class="container">
+        <h2>Ready to Digitize Your Practice?</h2>
+        <p>Join the platform managing over $10B in client assets.</p>
+        <a href="#" class="btn-primary">Schedule a Consultation</a>
+    </div>
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer>
+    <div class="container footer-content">
+
+        <div class="footer-col">
+            <h4>FinCore.</h4>
+            <p>Empowering the next generation of wealth managers.</p>
+        </div>
+
+        <div class="footer-col">
+            <h4>Product</h4>
+            <ul>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">API</a></li>
             </ul>
         </div>
-    </nav>
 
-    <header class="hero">
-        <div class="container hero-content">
-            <div class="hero-text">
-                <h1>Future-Proof Your <br> Wealth Management Firm</h1>
-                <p>Empower your advisors with a seamless digital footprint. From client onboarding to portfolio reporting, we provide the infrastructure you need to scale.</p>
-                <div class="hero-buttons">
-                    <a href="#" class="btn-primary">Start Free Trial</a>
-                    <a href="#" class="btn-outline">Watch Video <i class="fas fa-play-circle"></i></a>
-                </div>
-            </div>
-            <div class="hero-image">
-                <img src="banner v3.2" alt="SaaS Dashboard UI" class="hero-img">
-            </div>
+        <div class="footer-col">
+            <h4>Company</h4>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </div>
-    </header>
 
-    <section class="partners">
-        <div class="container">
-            <p>Trusted by over 500+ Investment Firms</p>
-            <div class="partner-logos">
-                <img src="logo_color.jpg" alt="Partner" class="partner-logo">
-                <img src="logo_color.jpg" alt="Partner" class="partner-logo">
-                <img src="logo_color.jpg" alt="Partner" class="partner-logo">
-                <img src="logo_color.jpg" alt="Partner" class="partner-logo">
-            </div>
+        <div class="footer-col">
+            <h4>Legal</h4>
+            <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+            </ul>
         </div>
-    </section>
 
-    <section id="features" class="features">
-        <div class="container">
-            <div class="section-header">
-                <h2>The Operating System for Modern Advisors</h2>
-                <p>Streamline operations and deliver a superior client experience.</p>
-            </div>
-            <div class="feature-grid">
-                <div class="feature-card">
-                    <i class="fas fa-file-signature icon"></i>
-                    <h3>Digital Onboarding</h3>
-                    <p>Paperless account opening with e-signatures and automated KYC compliance checks.</p>
-                </div>
-                <div class="feature-card">
-                    <i class="fas fa-chart-line icon"></i>
-                    <h3>Portfolio Analytics</h3>
-                    <p>Real-time performance tracking and white-labeled reporting for your clients.</p>
-                </div>
-                <div class="feature-card">
-                    <i class="fas fa-shield-alt icon"></i>
-                    <h3>Bank-Grade Security</h3>
-                    <p>SOC-2 certified infrastructure ensuring your client data is encrypted and secure.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+    </div>
 
-    <section id="solutions" class="solutions">
-        <div class="container split-layout">
-            <div class="split-image">
-                <img src="logo_color.jpg" alt="White Label Platform" class="solution-img">
-            </div>
-            <div class="split-content">
-                <h3>Your Brand, Front and Center</h3>
-                <p>We provide the technology; you provide the advice. Our white-label solution allows you to launch your own branded mobile app and web portal in weeks, not months.</p>
-                <ul class="check-list">
-                    <li><i class="fas fa-check"></i> Custom Domain & Branding</li>
-                    <li><i class="fas fa-check"></i> Integrated Billing & Invoicing</li>
-                    <li><i class="fas fa-check"></i> Client Communication Hub</li>
-                </ul>
-                <a href="#" class="btn-text">Explore Customization &rarr;</a>
-            </div>
-        </div>
-    </section>
+    <div class="container copyright">
+        <p>© 2024 FinCore Technologies Inc. All rights reserved.</p>
+    </div>
+</footer>
 
-    <section class="cta">
-        <div class="container">
-            <h2>Ready to Digitize Your Practice?</h2>
-            <p>Join the platform that manages over $10B in assets today.</p>
-            <a href="#" class="btn-primary">Schedule a Consultation</a>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container footer-content">
-            <div class="footer-col">
-                <h4>FinCore.</h4>
-                <p>Empowering the next generation of wealth managers.</p>
-            </div>
-            <div class="footer-col">
-                <h4>Product</h4>
-                <ul>
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">API</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Company</h4>
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Legal</h4>
-                <ul>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="container copyright">
-            <p>&copy; 2024 FinCore Technologies Inc. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
-
-
