--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="hero-image">
-            <img src="banner-v3.png" alt="FinCore Dashboard" class="hero-img">
+            <img src="banner.png" alt="FinCore Dashboard" class="hero-img">
         </div>
 
     </div>
@@ -184,3 +184,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
